# existential_types_in_c

./: .gitignore  CMakeLists.txt  README.md  main.c  main.exe.stackdump
src/: main.c  stack.c  stack.h  uint8_stack.c  uint8_stack.h
test/: hello_tests.cpp  stack_tests.cpp
